// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SourceList 1`] = `
<div
  aria-label="Sources"
  class="sidebar-container"
  role="menu"
  tabindex="0"
>
  <div
    class="relative flex-1 thin-scroll"
  >
    <div
      class=" rss-item"
      role="menuitem"
      tabindex="0"
    >
      <div
        class="sidebar-overview-item"
      >
        <div
          class="logo-icon"
        >
          <svg
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 6h16M4 10h16M4 14h16M4 18h16"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <div
          class="sidebar-overview-item__text"
        >
          All Items
        </div>
      </div>
    </div>
    <div
      class=" rss-item"
      role="menuitem"
      tabindex="0"
    >
      <div
        class="sidebar-overview-item"
      >
        <div
          class="logo-icon"
        >
          <svg
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 8h14M5 8a2 2 0 110-4h14a2 2 0 110 4M5 8v10a2 2 0 002 2h10a2 2 0 002-2V8m-9 4h4"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <div
          class="sidebar-overview-item__text"
        >
          Archive
        </div>
      </div>
    </div>
    <div
      class="pt-10"
    />
  </div>
  <div />
</div>
`;

exports[`SourceList 2`] = `
<div
  aria-label="Sources"
  class="sidebar-container"
  role="menu"
  tabindex="0"
>
  <div
    class="relative flex-1 thin-scroll"
  >
    <div
      class=" rss-item"
      role="menuitem"
      tabindex="0"
    >
      <div
        class="sidebar-overview-item"
      >
        <div
          class="logo-icon"
        >
          <svg
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 6h16M4 10h16M4 14h16M4 18h16"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <div
          class="sidebar-overview-item__text"
        >
          All Items
        </div>
      </div>
      <div
        class="sidebar-overview-item__count"
      >
        26
      </div>
    </div>
    <div
      class=" rss-item"
      role="menuitem"
      tabindex="0"
    >
      <div
        class="sidebar-overview-item"
      >
        <div
          class="logo-icon"
        >
          <svg
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 8h14M5 8a2 2 0 110-4h14a2 2 0 110 4M5 8v10a2 2 0 002 2h10a2 2 0 002-2V8m-9 4h4"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <div
          class="sidebar-overview-item__text"
        >
          Archive
        </div>
      </div>
    </div>
    <div
      class="pt-10"
    />
    <div
      class=" rss-item"
      role="menuitem"
      tabindex="0"
    >
      <div
        class="sidebar-item__container"
      >
        <div
          class="logo-icon"
        >
          <svg
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 5c7.18 0 13 5.82 13 13M6 11a7 7 0 017 7m-6 0a1 1 0 11-2 0 1 1 0 012 0z"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <div
          class="ml-2 text-xs truncate"
        >
          data-1
        </div>
      </div>
      <div
        class="sidebar-item__count"
      >
        24
      </div>
    </div>
    <div
      class=" rss-item"
      role="menuitem"
      tabindex="0"
    >
      <div
        class="sidebar-item__container"
      >
        <div
          class="image-icon"
        >
          <div>
            <img
              alt="icon"
              src="fake-icon-url"
            />
          </div>
        </div>
        <div
          class="ml-2 text-xs truncate"
        >
          data-2
        </div>
      </div>
    </div>
    <div
      class=" rss-item"
      role="menuitem"
      tabindex="0"
    >
      <div
        class="sidebar-item__container"
      >
        <div
          class="logo-icon"
        >
          <svg
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 5c7.18 0 13 5.82 13 13M6 11a7 7 0 017 7m-6 0a1 1 0 11-2 0 1 1 0 012 0z"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <div
          class="ml-2 text-xs truncate"
        >
          data-3
        </div>
      </div>
      <div
        class="sidebar-item__count"
      >
        2
      </div>
    </div>
  </div>
  <div />
</div>
`;

exports[`SourceList 3`] = `
<div
  aria-label="Sources"
  class="sidebar-container"
  role="menu"
  tabindex="0"
>
  <div
    class="relative flex-1 thin-scroll"
  >
    <div
      class=" rss-item"
      role="menuitem"
      tabindex="0"
    >
      <div
        class="sidebar-overview-item"
      >
        <div
          class="logo-icon"
        >
          <svg
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 6h16M4 10h16M4 14h16M4 18h16"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <div
          class="sidebar-overview-item__text"
        >
          All Items
        </div>
      </div>
      <div
        class="sidebar-overview-item__count"
      >
        2
      </div>
    </div>
    <div
      class=" rss-item"
      role="menuitem"
      tabindex="0"
    >
      <div
        class="sidebar-overview-item"
      >
        <div
          class="logo-icon"
        >
          <svg
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 8h14M5 8a2 2 0 110-4h14a2 2 0 110 4M5 8v10a2 2 0 002 2h10a2 2 0 002-2V8m-9 4h4"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <div
          class="sidebar-overview-item__text"
        >
          Archive
        </div>
      </div>
    </div>
    <div
      class="pt-10"
    />
    <div
      class=" rss-item"
      role="menuitem"
      tabindex="0"
    >
      <div
        class="sidebar-item__container"
      >
        <div
          class="image-icon"
        >
          <div>
            <img
              alt="icon"
              src="fake-icon-url"
            />
          </div>
        </div>
        <div
          class="ml-2 text-xs truncate"
        >
          data-2
        </div>
      </div>
    </div>
    <div
      class=" rss-item"
      role="menuitem"
      tabindex="0"
    >
      <div
        class="sidebar-item__container"
      >
        <div
          class="logo-icon"
        >
          <svg
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 5c7.18 0 13 5.82 13 13M6 11a7 7 0 017 7m-6 0a1 1 0 11-2 0 1 1 0 012 0z"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <div
          class="ml-2 text-xs truncate"
        >
          data-3
        </div>
      </div>
      <div
        class="sidebar-item__count"
      >
        2
      </div>
    </div>
  </div>
  <div />
</div>
`;

exports[`SourceList 4`] = `
<div
  aria-label="Sources"
  class="sidebar-container"
  role="menu"
  tabindex="0"
>
  <div
    class="relative flex-1 thin-scroll"
  >
    <div
      class=" rss-item"
      role="menuitem"
      tabindex="0"
    >
      <div
        class="sidebar-overview-item"
      >
        <div
          class="logo-icon"
        >
          <svg
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 6h16M4 10h16M4 14h16M4 18h16"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <div
          class="sidebar-overview-item__text"
        >
          All Items
        </div>
      </div>
      <div
        class="sidebar-overview-item__count"
      >
        2
      </div>
    </div>
    <div
      class=" rss-item"
      role="menuitem"
      tabindex="0"
    >
      <div
        class="sidebar-overview-item"
      >
        <div
          class="logo-icon"
        >
          <svg
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 8h14M5 8a2 2 0 110-4h14a2 2 0 110 4M5 8v10a2 2 0 002 2h10a2 2 0 002-2V8m-9 4h4"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <div
          class="sidebar-overview-item__text"
        >
          Archive
        </div>
      </div>
    </div>
    <div
      class="pt-10"
    />
    <div
      class=" rss-item"
      role="menuitem"
      tabindex="0"
    >
      <div
        class="sidebar-item__container"
      >
        <div
          class="image-icon"
        >
          <div>
            <img
              alt="icon"
              src="fake-icon-url"
            />
          </div>
        </div>
        <div
          class="ml-2 text-xs truncate"
        >
          data-2-new-value
        </div>
      </div>
    </div>
    <div
      class=" rss-item"
      role="menuitem"
      tabindex="0"
    >
      <div
        class="sidebar-item__container"
      >
        <div
          class="logo-icon"
        >
          <svg
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 5c7.18 0 13 5.82 13 13M6 11a7 7 0 017 7m-6 0a1 1 0 11-2 0 1 1 0 012 0z"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <div
          class="ml-2 text-xs truncate"
        >
          data-3
        </div>
      </div>
      <div
        class="sidebar-item__count"
      >
        2
      </div>
    </div>
  </div>
  <div />
</div>
`;

exports[`SourceList 5`] = `
<div
  aria-label="Sources"
  class="sidebar-container"
  role="menu"
  tabindex="0"
>
  <div
    class="relative flex-1 thin-scroll"
  >
    <div
      class=" rss-item"
      role="menuitem"
      tabindex="0"
    >
      <div
        class="sidebar-overview-item"
      >
        <div
          class="logo-icon"
        >
          <svg
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z"
            />
            <path
              d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z"
            />
          </svg>
        </div>
        <div
          class="sidebar-overview-item__text"
        >
          Unread
        </div>
      </div>
      <div
        class="sidebar-overview-item__count"
      >
        2
      </div>
    </div>
    <div
      class="pt-10"
    />
    <div
      class=" rss-item"
      role="menuitem"
      tabindex="0"
    >
      <div
        class="sidebar-item__container"
      >
        <div
          class="logo-icon"
        >
          <svg
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 5c7.18 0 13 5.82 13 13M6 11a7 7 0 017 7m-6 0a1 1 0 11-2 0 1 1 0 012 0z"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <div
          class="ml-2 text-xs truncate"
        >
          data-3
        </div>
      </div>
      <div
        class="sidebar-item__count"
      >
        2
      </div>
    </div>
  </div>
  <div />
</div>
`;

exports[`SourceList 6`] = `
<div
  aria-label="Sources"
  class="sidebar-container"
  role="menu"
  tabindex="0"
>
  <div
    class="relative flex-1 thin-scroll"
  >
    <div
      class=" rss-item"
      role="menuitem"
      tabindex="0"
    >
      <div
        class="sidebar-overview-item"
      >
        <div
          class="logo-icon"
        >
          <svg
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
            />
          </svg>
        </div>
        <div
          class="sidebar-overview-item__text"
        >
          Starred
        </div>
      </div>
      <div
        class="sidebar-overview-item__count"
      >
        2
      </div>
    </div>
    <div
      class="pt-10"
    />
    <div
      class=" rss-item"
      role="menuitem"
      tabindex="0"
    >
      <div
        class="sidebar-item__container"
      >
        <div
          class="logo-icon"
        >
          <svg
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 5c7.18 0 13 5.82 13 13M6 11a7 7 0 017 7m-6 0a1 1 0 11-2 0 1 1 0 012 0z"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <div
          class="ml-2 text-xs truncate"
        >
          data-3
        </div>
      </div>
      <div
        class="sidebar-item__count"
      >
        2
      </div>
    </div>
  </div>
  <div />
</div>
`;
